--- a/src/server_manager/ui_components/outline-region-picker-step.html
+++ b/src/server_manager/ui_components/outline-region-picker-step.html
@@ -13,14 +13,14 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<link rel='import' href='../bower_components/polymer/polymer.html'>
-<link rel='import' href='../bower_components/paper-button/paper-button.html'>
-<link rel='import' href='../bower_components/paper-progress/paper-progress.html'>
-<link rel='import' href='../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../bower_components/iron-icons/iron-icons.html'>
+<link rel="import" href="../bower_components/polymer/polymer.html" />
+<link rel="import" href="../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../bower_components/paper-progress/paper-progress.html" />
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html" />
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html" />
 
-<link rel="import" href="./cloud-install-styles.html">
-<link rel="import" href="./outline-step-view.html">
+<link rel="import" href="./cloud-install-styles.html" />
+<link rel="import" href="./outline-step-view.html" />
 
 <dom-module id="outline-region-picker-step">
   <template>
@@ -30,16 +30,16 @@
       input[type="radio"] {
         display: none;
       }
-      input[type="radio"]:checked+label.city-button {
-        background-color: rgba(255,255,255,0.08);
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+      input[type="radio"]:checked + label.city-button {
+        background-color: rgba(255, 255, 255, 0.08);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
         border-radius: 4px;
         border: 1px solid var(--primary-green);
       }
-      input[type="radio"]+label.city-button:hover {
+      input[type="radio"] + label.city-button:hover {
         border: 1px solid var(--primary-green);
       }
-      input[type="radio"]+label.city-button {
+      input[type="radio"] + label.city-button {
         display: inline-block;
         flex: 1;
         /* Distribute space evenly, accounting for margins, so there are always 4 cards per row. */
@@ -49,14 +49,14 @@
         padding-top: 24px;
         text-align: center;
         border: 1px solid;
-        border-color: rgba(0, 0, 0, .00);
+        border-color: rgba(0, 0, 0, 0);
         cursor: pointer;
-        transition: .5s;
+        transition: 0.5s;
         background: var(--background-contrast-color);
-        box-shadow: 0 0 2px 0 rgba(0,0,0,0.14), 0 2px 2px 0 rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.20);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
         border-radius: 4px;
       }
-      input[type="radio"]:disabled+label.city-button {
+      input[type="radio"]:disabled + label.city-button {
         /* TODO(alalama): make it look good and indicate disabled */
         filter: blur(2px);
       }
@@ -89,30 +89,41 @@
         margin: 6px;
       }
     </style>
-      <outline-step-view display-action>
-        <span slot="step-title">[[localize('region-title')]]</span>
-        <span slot="step-description">[[localize('region-description')]]</span>
-        <span slot="step-action">
-          <paper-button id="createServerButton" on-tap='handleCreateServerTap' disabled$='[[!isCreateButtonEnabled(creatingServer, selectedCityId)]]'>
-            [[localize('region-setup')]]
-          </paper-button>
-        </span>
-        <div class='card-content' id="cityContainer">
-          <template is="dom-repeat" items="{{cities}}">
-            <input type='radio' city$='{{item}}' name='city' id$='{{item}}' disabled$='{{!isAvailable(availableRegionIds, item)}}' on-change='citySelected'>
-              <label for$='{{item}}' class='city-button'>
-                <iron-icon icon="check-circle" hidden$="{{!_isSelectedCity(selectedCityId, item)}}"></iron-icon>
-                <img class='flag' src$='{{getFlag(item)}}'>
-                <div class="city-name">{{getCityName(item, localize)}}</div>
-              </label>
-            </input>
-          </template>
-        </div>
-        <paper-progress hidden$="[[!creatingServer]]" indeterminate class="slow"></paper-progress>
-      </outline-step-view>
+    <outline-step-view display-action>
+      <span slot="step-title">[[localize('region-title')]]</span>
+      <span slot="step-description">[[localize('region-description')]]</span>
+      <span slot="step-action">
+        <paper-button
+          id="createServerButton"
+          on-tap="handleCreateServerTap"
+          disabled$="[[!isCreateButtonEnabled(creatingServer, selectedCityId)]]"
+        >
+          [[localize('region-setup')]]
+        </paper-button>
+      </span>
+      <div class="card-content" id="cityContainer">
+        <template is="dom-repeat" items="{{cities}}">
+          <input
+            type="radio"
+            city$="{{item}}"
+            name="city"
+            id$="{{item}}"
+            disabled$="{{!isAvailable(availableRegionIds, item)}}"
+            on-change="citySelected"
+            \
+          />
+          <label for$="{{item}}" class="city-button">
+            <iron-icon icon="check-circle" hidden$="{{!_isSelectedCity(selectedCityId, item)}}"></iron-icon>
+            <img class="flag" src$="{{getFlag(item)}}" />
+            <div class="city-name">{{getCityName(item, localize)}}</div>
+          </label>
+        </template>
+      </div>
+      <paper-progress hidden$="[[!creatingServer]]" indeterminate class="slow"></paper-progress>
+    </outline-step-view>
   </template>
   <script>
-    const FLAG_IMAGE_DIR = 'images/flags';
+    const FLAG_IMAGE_DIR = "images/flags";
     const flagById = {
       ams: `${FLAG_IMAGE_DIR}/netherlands.png`,
       sgp: `${FLAG_IMAGE_DIR}/singapore.png`,
@@ -121,21 +132,22 @@
       lon: `${FLAG_IMAGE_DIR}/uk.png`,
       sfo: `${FLAG_IMAGE_DIR}/us.png`,
       tor: `${FLAG_IMAGE_DIR}/canada.png`,
-      nyc: `${FLAG_IMAGE_DIR}/us.png`
+      nyc: `${FLAG_IMAGE_DIR}/us.png`,
     };
 
     Polymer({
-      is: 'outline-region-picker-step',
+      is: "outline-region-picker-step",
       properties: {
         cities: {
           type: Array,
           readonly: true,
-          value: Object.keys(flagById)
+          value: Object.keys(flagById),
         },
-        availableRegionIds: {  // One-to-one map from cityIds to regionIds.
+        availableRegionIds: {
+          // One-to-one map from cityIds to regionIds.
           type: Object,
           readonly: true,
-          value: {}
+          value: {},
         },
         selectedCityId: String,
         creatingServer: Boolean,
@@ -144,27 +156,27 @@
           readonly: true,
         },
       },
-      handleCreateServerTap: function () {
+      handleCreateServerTap: function() {
         this.creatingServer = true;
-        this.fire('RegionSelected');
+        this.fire("RegionSelected");
       },
-      getCityName: function (cityId, localize) {
+      getCityName: function(cityId, localize) {
         if (!this.localize) {
-          return '';
+          return "";
         }
-        return this.localize(`city-${cityId}`) || '';
+        return this.localize(`city-${cityId}`) || "";
       },
-      getFlag: function (cityId) {
-        return flagById[cityId] || '';
+      getFlag: function(cityId) {
+        return flagById[cityId] || "";
       },
-      isAvailable: function (map, cityId) {
+      isAvailable: function(map, cityId) {
         if (!map) {
           return false;
         }
         return cityId in map;
       },
-      citySelected: function (event) {
-        this.selectedCityId = event.model.get('item');
+      citySelected: function(event) {
+        this.selectedCityId = event.model.get("item");
       },
       _isSelectedCity: function(selectedCityId, cityId) {
         if (!selectedCityId) {
