Make sure the new key doesn't briefly disappear and reappear

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -676,12 +676,13 @@
             commitName: () => {
               accessKey.name = input.value;
               this.push('accessKeyRows', accessKey);
+              this._newAccessKey = null;
             },
-            revertName: () => {}
+            revertName: () => {
+              this._newAccessKey = null;
+            }
           }
         });
-
-        this._newAccessKey = null;
       },
       removeAccessKey: function(accessKeyId) {
         for (let ui in this.accessKeyRows) {
