Expand buttons when their label is too wide to fit

--- a/src/server_manager/ui_components/outline-validated-input.html
+++ b/src/server_manager/ui_components/outline-validated-input.html
@@ -54,7 +54,7 @@
 
       paper-button {
         height: 36px;
-        width: 83px;
+        min-width: 83px;
         text-align: center;
       }
 
