Add data limits feedback survey link

--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -275,9 +275,8 @@
                   <h3>[[localize('data-limits')]]</h3>
                   <p>
                     [[localize('data-limits-description', 'date', dataLimitsAvailabilityDate)]]<br />
-                    <!-- TODO: link to feedback form -->
                     <span
-                      inner-h-t-m-l="[[localize('experiments-feedback', 'openLink', '<a href=#>', 'closeLink', '</a>')]]"
+                      inner-h-t-m-l="[[localize('experiments-feedback', 'openLink', '<a href=https://docs.google.com/forms/d/e/1FAIpQLSfP7q9GnJCQyWMpFTLd9zwCm7cvUa-2NR8a8SznwMSbuRnrWg/viewform>', 'closeLink', '</a>')]]"
                     ></span>
                   </p>
                 </div>
