Select newly added keys (#601)
* Select newly added keys

* Add a comment about force rendering

* Use the newest types for express and remove a conflict between multiple
versions of express between the top level node modules and the
metrics_server node modules.  Also fix node typing at major version 12
to avoid issues with typing in node 13.

--- a/src/server_manager/ui_components/outline-server-view.html
+++ b/src/server_manager/ui_components/outline-server-view.html
@@ -510,6 +510,7 @@
                     <input
                       type="text"
                       class="access-key-name"
+                      id$="access-key-[[item.id]]"
                       placeholder="{{item.placeholderName}}"
                       value="[[item.name]]"
                       on-blur="_handleNameInputBlur"
@@ -701,9 +702,11 @@
       addAccessKey: function(accessKey) {
         // TODO(fortuna): Restore loading animation.
         // TODO(fortuna): Restore highlighting.
-        // Push to array using Polymer in order to propagate changes. See
-        // https://www.polymer-project.org/1.0/docs/devguide/model-data#array-mutation
         this.push("accessKeyRows", accessKey);
+        // Force render the access key list so that the input is present in the DOM
+        this.$.accessKeysContainer.querySelector("dom-repeat").render();
+        const input = this.$$(`#access-key-${accessKey.id}`);
+        input.select();
       },
       removeAccessKey: function(accessKeyId) {
         for (let ui in this.accessKeyRows) {
